assets/theme.css
/* ... */
.bold {
  font-weight: bold;
}

.text-xxs {
  font-size: 10px;
  line-height: 1.7;
}

.text-xs {
  font-size: var(--text-xs);
  line-height: 1.7;
}

.text-sm {
  font-size: var(--text-sm);
  line-height: 1.6;
}

.text-base {
  font-size: var(--text-base);
  line-height: 1.6;
}

.text-lg {
  font-size: var(--text-lg);
  line-height: 1.6;
}

.heading, .h0, .h1, .h2, .h3, .h4, .h5, .h6, .prose :is(h1, h2, h3, h4, h5, h6) {
  font-family: var(--heading-font-family);
  font-weight: var(--heading-font-weight);
  font-style: var(--heading-font-style);
  letter-spacing: var(--heading-letter-spacing);
  text-transform: var(--heading-text-transform);
  overflow-wrap: anywhere;
}

.h0 {
  font-size: var(--text-h0);
  line-height: 1;
}

.h1, .prose h1:not(.h0, .h1, .h2, .h3, .h4, .h5, .h6) {
  font-size: var(--text-h1);
  line-height: 1.1;
}

.h2, .prose h2:not(.h0, .h1, .h2, .h3, .h4, .h5, .h6) {
  font-size: var(--text-h2);
  line-height: 1.1;
}

.h3, .prose h3:not(.h0, .h1, .h2, .h3, .h4, .h5, .h6) {
  font-size: var(--text-h3);
  line-height: 1.2;
}

.h4, .prose h4:not(.h0, .h1, .h2, .h3, .h4, .h5, .h6) {
  font-size: var(--text-h4);
  line-height: 1.3;
}

.h5, .prose h5:not(.h0, .h1, .h2, .h3, .h4, .h5, .h6) {
  font-size: var(--text-h5);
  line-height: 1.4;
}

.h6, .prose h6:not(.h0, .h1, .h2, .h3, .h4, .h5, .h6) {
  font-size: var(--text-h6);
  line-height: 1.4;
}

@media screen and (min-width: 700px) {
  .sm\:text-xxs {
    font-size: 10px;
    line-height: 1.7;
  }

  .sm\:text-xs {
    font-size: var(--text-xs);
    line-height: 1.7;
  }

  .sm\:text-sm {
    font-size: var(--text-sm);
    line-height: 1.6;
  }

  .sm\:text-base {
    font-size: var(--text-base);
    line-height: 1.6;
  }

  .sm\:text-lg {
    font-size: var(--text-lg);
    line-height: 1.6;
  }

  .sm\:h0 {
    font-size: var(--text-h0);
    line-height: 1;
  }

  .sm\:h1 {
    font-size: var(--text-h1);
    line-height: 1.1;
  }

  .sm\:h2 {
    font-size: var(--text-h2);
    line-height: 1.1;
  }

  .sm\:h3 {
    font-size: var(--text-h3);
    line-height: 1.2;
  }

  .sm\:h4 {
    font-size: var(--text-h4);
    line-height: 1.3;
  }

  .sm\:h5 {
    font-size: var(--text-h5);
    line-height: 1.4;
  }

  .sm\:h6 {
    font-size: var(--text-h6);
    line-height: 1.4;
  }
}

.line-through {
  text-decoration: line-through;
}

.break-all {
  overflow-wrap: anywhere;
}

.hyphenate {
  -webkit-hyphens: auto;
  hyphens: auto;
}

.truncate-text {
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 100%;
  overflow: hidden;
}

.line-clamp {
  -webkit-line-clamp: var(--line-clamp-count, 2);
  -webkit-box-orient: vertical;
  display: -webkit-box;
  overflow: hidden;
}
.stock_available{
    color: rgb(var(--warning-text));
    gap: var(--spacing-3);
    text-align: center;
    margin: 0px auto;
    display: block;
}

/* App content css */
.app-wrapper .page-width{
  padding: 0 40px;
}
.app-wrapper #store-contents{
  margin-bottom: 100px;
}
@media only screen and (min-width: 769px){
  .app-wrapper #store-contents .medium-up--one-quarter {
    width: 25%;
  }
  .app-wrapper #store-contents .medium-up--three-quarters {
    width: 75%;
  }
}
@media only screen and (max-width: 768px){
  .app-wrapper #store-contents .grid__item .small--one-half{
    width: 100%;
  }
  .app-wrapper .page-width{
    padding: 0 10px;
  }
  .app-wrapper #store-contents .xs-store-collection .grid ul.grid--collection{
    justify-content: space-between;
    display: grid;
    grid-template-columns: 1fr 1fr;
  }
  
  .app-wrapper #store-contents .xs-store-collection .grid .grid__item{
    padding-left: 0;
  }
}
.app-wrapper #store-contents .grid__item .filter-group h4{
  font-size: 16px;
  font-weight: 600;
}
.app-wrapper #store-contents .grid__item .filter-group .scroll-content li{
  font-size: 14px;
}

.grid__item {
  float: left;
  padding-left: 22px;
  width: 100%;
  min-height: 1px;
}
.app-wrapper #store-contents .grid__item .grid-product__content .grid-product__title, .app-wrapper #store-contents .grid__item .grid-product__content .grid-product__price{
  font-size: 16px;
  text-align: center;
}
.app-wrapper #store-contents .grid__item .grid-product__content .grid-product__meta{
  margin-top: 10px;
}
.app-wrapper #store-contents .grid__item .grid-product__content .grid-product__title{
  line-height: 1.5;
}
.page-width #store-contents .grid__item .grid-product__content{
  position: relative;
}
.page-width #store-contents .grid__item .grid-product__content .grid-product__tag{
  position: absolute;
  font-size: 13px;
  right: 5%;
  z-index: 2;
  background-color: #fff;
  padding: 7px 7px 7px 9px;
  line-height: 1.2;
}
line-item .line-item__info .list-disc .text-subdued{
  list-style: none;
}
.app-wrapper #store-contents .grid__image-ratio--square:before {
  padding-bottom: 100%;
}
.app-wrapper #store-contents .grid__image-ratio:before {
  content: "";
  display: block;
  height: 0;
  width: 100%;
}
.app-wrapper #store-contents .grid__image-ratio{
  /* background-image: attr(data-image url); */
  position: relative;
  background-repeat: no-repeat;
  background-size: contain;
  background-position: 50%;
  background-color: #fff;
  background-color: var(--colorSmallImageBg);
}

